--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,36 +7,9 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <nav class="navbar navbar-default" role="navigation">
-    <div class="navbar-header">
-       
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-         <span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
-      </button> <a class="navbar-brand" href="#">Collaborative GIF Cloud</a>
-    </div>
-      <ul class="nav navbar-nav navbar-right">
-        <% if user_signed_in? %>
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Account<strong class="caret"></strong></a>
-            <ul class="dropdown-menu">
-              <li>
-                <%= link_to('Sign Out', destroy_user_session_path, method: :delete) %>
-              </li>
-            </ul>
-          </li>
-        <% end %>
-      </ul>
-    </div>
-  </nav>
-
+  <%= render partial: 'layouts/navbar' %>
   <div class="container-fluid">
-    <div class="row">
-      <div class="col-md-12">
-        <div class="page-header">
-          <%= yield :page_header %>
-        </div>
-      </div>
-    </div>
+    <%= render partial: 'layouts/page_header' %>
     <%= yield %>
     </div>
   </body>
