--- a/app/views/gifs/_form.html.erb
+++ b/app/views/gifs/_form.html.erb
@@ -1,17 +1,7 @@
-<%= form_for(@gif) do |f| %>
-  <% if @gif.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@gif.errors.count, "error") %> prohibited this gif from being saved:</h2>
-
-      <ul>
-      <% @gif.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
-
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+<%= simple_form_for @gif do |form| %>
+  <%= form.input :image, as: :file %>
+  <%= form.input :description, as: :text %>
+  <%= form.input :metadata, as: :text %>
+  <%= form.input :tag_list %>
+  <%= form.button :submit %>
 <% end %>
