--- a/app/assets/stylesheets/gifs.scss
+++ b/app/assets/stylesheets/gifs.scss
@@ -1,3 +1,9 @@
 // Place all the styles related to the gifs controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.new_gif {
+  max-width: 330px;
+  padding: 15px;
+  margin: 0 auto;
+}
