--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -9,6 +9,9 @@
       <li>
         <%= link_to 'Browse', gifs_path %>
       </li>
+      <li>
+        <%= link_to 'Upload', new_gif_path %>
+      </li>
     </ul>
     <%= render partial: 'layouts/search_bar' %>
     <ul class="nav navbar-nav navbar-right">
