--- a/app/assets/stylesheets/gifs.scss
+++ b/app/assets/stylesheets/gifs.scss
@@ -7,3 +7,20 @@
   padding: 15px;
   margin: 0 auto;
 }
+
+.gif-file-type {
+  font-size: 60px;
+  width: 60px;
+  position: absolute;
+  left: 0;
+  top: 6px;
+}
+
+.gif-file-info {
+  padding-left: 65px;
+  margin-left: 15px;
+}
+
+.btn-toolbar {
+  margin-left: 22px;
+}
