--- a/app/views/gifs/index.html.erb
+++ b/app/views/gifs/index.html.erb
@@ -1,25 +1,7 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Gifs</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @gifs.each do |gif| %>
-      <tr>
-        <td><%= link_to 'Show', gif %></td>
-        <td><%= link_to 'Edit', edit_gif_path(gif) %></td>
-        <td><%= link_to 'Destroy', gif, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New GIF', new_gif_path %>
+<div class="row">
+  <% @gifs.each do |gif| %>
+    <%= render partial: 'gifs/card', locals: {gif: gif} %>
+  <% end %>
+</div>
