--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -2,29 +2,32 @@
   <div class="navbar-header">
     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
        <span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
-    </button> <a class="navbar-brand" href="#">Collaborative GIF Cloud</a>
+    </button>
+    <a class="navbar-brand" href="#"></a>
   </div>
   <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-    <ul class="nav navbar-nav navbar-left">
-      <li>
-        <%= link_to 'Browse', gifs_path %>
-      </li>
-      <li>
-        <%= link_to 'Upload', new_gif_path %>
-      </li>
-    </ul>
-    <%= render partial: 'layouts/search_bar' %>
-    <ul class="nav navbar-nav navbar-right">
-      <% if user_signed_in? %>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Account<strong class="caret"></strong></a>
-          <ul class="dropdown-menu">
-            <li>
-              <%= link_to('Sign Out', destroy_user_session_path, method: :delete) %>
-            </li>
-          </ul>
+    <% if user_signed_in? %>
+      <ul class="nav navbar-nav navbar-left">
+        <li>
+          <%= link_to 'Browse', gifs_path %>
         </li>
-      <% end %>
-    </ul>
+        <li>
+          <%= link_to 'Upload', new_gif_path %>
+        </li>
+      </ul>
+      <%= render partial: 'layouts/search_bar' %>
+      <ul class="nav navbar-nav navbar-right">
+        <% if user_signed_in? %>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Account<strong class="caret"></strong></a>
+            <ul class="dropdown-menu">
+              <li>
+                <%= link_to('Sign Out', destroy_user_session_path, method: :delete) %>
+              </li>
+            </ul>
+          </li>
+        <% end %>
+      </ul>
+    <% end %>
   </div>
 </nav>
