--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,11 +1,13 @@
 <% content_for :page_header do %>
-  <h1>
-    <% if user_signed_in? %>
-      Welcome <%= current_user.username %>!
-    <% else %>
-      Welcome!
-    <% end %>
-  </h1>
+  <div class="page-header">
+    <h1>
+      <% if user_signed_in? %>
+        Welcome <%= current_user.username %>!
+      <% else %>
+        Welcome!
+      <% end %>
+    </h1>
+  </div>
 <% end %>
 
 <div class="row">
