get filtering on tags working

--- a/app/assets/stylesheets/gifs.scss
+++ b/app/assets/stylesheets/gifs.scss
@@ -17,10 +17,15 @@
 }
 
 .gif-file-info {
-  padding-left: 65px;
-  margin-left: 15px;
+  padding: 10px;
+  height: 95px;
 }
 
 .btn-toolbar {
   margin-left: 22px;
+}
+
+.gif-thumbnail {
+  margin: 0 auto;
+  margin-bottom: 10px;
 }
