--- a/app/views/gifs/new.html.erb
+++ b/app/views/gifs/new.html.erb
@@ -1,5 +1,12 @@
 <h1>New GIF</h1>
 
-<%= render 'form' %>
+<%= simple_form_for @gif do |form| %>
+  <%= form.input :image, as: :file %>
+  <%= form.input :title %>
+  <%= form.input :description, as: :text %>
+  <%= form.input :metadata, as: :text %>
+  <%= form.input :tag_list %>
+  <%= form.button :submit %>
+<% end %>
 
 <%= link_to 'Back', gifs_path %>
